# DEMOranges

./: .gitignore  CMakeLists.txt  README.md
analysis/: agg_analysis.py  benchmarks.py
analysis/paraview/: box_generator.py  hourglass_generator.py  setup_rotating_box_render.py
analysis/util/: file_io.py  objects.py  sim_utils.py  vector_utils.py
clEnqueueNDRangeKernel/: host.c  propagate.cl
kernels/: assign_particles.cl  calculate_pp_collision.cl  calculate_pw_collision.cl  iterate_particle.cl  make_pp_collisions.cl  make_pw_collisions.cl  pp_collision.cl  pw_collision.cl  test_compile.c
kernels/get_gravity/: diag_gravity.cl  no_gravity.cl  point_gravity.cl  rotating_gravity.cl
kernels/get_vel_fluid/: no_drag.cl  tgv.cl  x_1_drag.cl
sims/: box.c  hourglass.c  multi_tgv_periodic.c  particle_ball.c  rotating_box.c  test_host.c  tgv_box.c  tgv_periodic.c
sims/simRunner/: simRunner.c  simRunner.h
structures/: collision.h  particle.h  wall.h
tests/: run_tests.c  standalone_tests.c  test_kernels.h
tests/run_tests/: run_tests.c  run_tests.h
tests/test_alignment/: alignment_test_kernels.cl  test_alignment.c  test_alignment.h
tests/test_assign_particles/: test_assign_particles.c  test_assign_particles.h
tests/test_atomics/: test_atomics.c  test_atomics.cl  test_atomics.h
tests/test_kernels/: test_kernels.c  test_kernels.h
tests/test_main_loop/: test_main_loop.c  test_main_loop.h
tests/test_make_pp_collisions/: test_make_pp_collisions.c  test_make_pp_collisions.h
tests/test_setContext/: test_setContext.h
tests/test_setDevices/: test_setContext.c  test_setContext.h
util/: clDeviceUtils.c  clDeviceUtils.h  clUtils.c  clUtils.h  collisionUtils.c  collisionUtils.h  cvUtils.c  cvUtils.h  kernelUtils.cl  particleUtils.c  particleUtils.h  vectorUtils.h  wallUtils.h
util/clUtils/: clUtils.c  clUtils.h
util/collisionUtils/: collisionUtils.h
util/cvUtils/: cvUtils.c  cvUtils.h
util/particleUtils/: particleUtils.c  particleUtils.h
util/simUtils/: simUtils.c  simUtils.h
util/vectorUtils/: vectorUtils.c
util/wallUtils/: wallUtils.c  wallUtils.h
verification/cohesion/: cohesion_graphs.py  cohesion_sim.c
verification/drag/: drag_sim.c
verification/friction/: friction_graphs.py  friction_sim.c
verification/normal_force/: normal_force_graphs.py  normal_force_sim.c
